--- a/JS tasks day5/task3/index.html
+++ b/JS tasks day5/task3/index.html
@@ -31,11 +31,11 @@
   <body>
     <h1>My shopping list</h1>
     <div>
-      <label for="itemInput">Enter a new item:</label>
-      <input type="text" id="itemInput"  />
-      <button id="addButton">Add item</button>
+      <label for="input">Enter a new item:</label>
+      <input type="text" id="items"  />
+      <button id="btn">Add item</button>
     </div>
-    <ul id="shoppingList"></ul>
+    <ul id="list"></ul>
     <script src="task.js"></script>
   </body>
 </html>
