--- a/JS tasks day5/task3/index.html
+++ b/JS tasks day5/task3/index.html
@@ -24,17 +24,17 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-   
+    <link rel="stylesheet" href="style.css" />
   
     <title>JS</title>
   </head>
   <body>
     <h1>My shopping list</h1>
-    <div>
+    <form id="form">
       <label for="input">Enter a new item:</label>
       <input type="text" id="items"  />
-      <button id="btn">Add item</button>
-    </div>
+      <button id="btn" type="submit">Add item</button>
+    </form>
     <ul id="list"></ul>
     <script src="task.js"></script>
   </body>
